--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
     </div>
 
     <script>
-        // Полный словарь для шифрования
+        // Перемешанный словарь для шифрования
         const encryptMap = {
-            "а":"q", "б":"R", "в":"\\/", "г":"*g", "д":"k", "е":"zz", "ё":"'", "ж":"}{", "з":"Q",
-            "и":"f", "й":"F", "к":"~a", "л":"?n", "м":"@", "н":"#", "о":"$$", "п":"_+_", "р":"s",
-            "с":"&", "т":"|-", "у":"Y", "ф":"d", "х":"+", "ц":">>", "ч":"<<", "ш":"X", "щ":"/X",
-            "ь":"n", "ы":"/n", "ъ":"//n", "э":":O", "ю":";;", "я":"m"
+            "а":"<<", "б":";;", "в":"/X", "г":"F", "д":"}{", "е":"#", "ё":"*g", "ж":"X", "з":"_+_",
+            "и":"~a", "й":"//n", "к":"zz", "л":"@", "м":"Q", "н":"?", "о":"+", "п":"Y", "р":"d",
+            "с":"k", "т":"$$", "у":"n", "ф":"s", "х":"/n", "ц":"|-", "ч":"R", "ш":"f", "щ":">>",
+            "ь":"&", "ы":"\\/", "ъ":"'", "э":"m", "ю":"q", "я":":O"
         };
 
         // Создаем обратный словарь для дешифровки
@@ -201,7 +201,7 @@
         });
 
         // Тестовый пример
-        inputText.value = '%&//nzzXn zz/X\' :O|-f+ @m*g~af+ dsq#>>YQ&~af+ RY?n$$~a, kq \\//n_+_zzF }{zz <<q;;';
+        inputText.value = '%&//n<<Xn <</X* :Om$$~a+ @Q;;>>~a+ dkq?|-YQ&~a+ RY@+>>, }{<< \\//n_+_<<F X<< Rq';
         updateOutput();
     </script>
 </body>
